--- a/package.json
+++ b/package.json
@@ -6,25 +6,37 @@
   "private": true,
   "dependencies": {
     "@swc/helpers": "~0.5.2",
+    "next": "13.4.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@nx/cypress": "17.0.2",
     "@nx/eslint": "17.0.2",
     "@nx/eslint-plugin": "17.0.2",
     "@nx/jest": "17.0.2",
     "@nx/js": "17.0.2",
+    "@nx/next": "17.0.2",
+    "@nx/react": "17.0.2",
     "@nx/workspace": "17.0.2",
     "@swc-node/register": "~1.6.7",
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.85",
     "@swc/jest": "0.2.20",
+    "@testing-library/react": "14.0.0",
     "@types/jest": "^29.4.0",
-    "@types/node": "18.7.1",
+    "@types/node": "18.14.2",
+    "@types/react": "18.2.24",
+    "@types/react-dom": "18.2.9",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
+    "cypress": "^13.0.0",
     "eslint": "~8.46.0",
+    "eslint-config-next": "13.4.1",
     "eslint-config-prettier": "^9.0.0",
     "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
     "nx": "17.0.2",
     "prettier": "^2.6.2",
