--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -10,6 +10,7 @@
     "start": "directus bootstrap && directus start"
   },
   "dependencies": {
+    "@kukusa/directus-extension-bundle": "workspace:*",
     "directus": "^10.7.1"
   },
   "devDependencies": {
