--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@nx/js": "17.0.2",
     "@nx/next": "17.0.2",
     "@nx/react": "17.0.2",
+    "@nx/rollup": "17.0.2",
     "@nx/workspace": "17.0.2",
+    "@rollup/plugin-url": "^7.0.0",
+    "@svgr/rollup": "^8.0.1",
     "@swc-node/register": "~1.6.7",
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.85",
@@ -45,6 +48,7 @@
     "jest-environment-node": "^29.4.1",
     "nx": "17.0.2",
     "prettier": "^2.6.2",
+    "swc-loader": "0.1.15",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.1.3",
